--- a/assets/styles/form.css
+++ b/assets/styles/form.css
@@ -1,1 +1,7 @@
-
+body 
+{
+    background: linear-gradient(135deg, #71b7e6, #9b59b6);
+    font-family: calibri;
+    padding: 20px;
+    margin: 10px;
+}
